force-app/main/default/objects/PortfolioExperience__c/PortfolioExperience__c.object-meta.xml
<CustomObject>
    <label>PortfolioExperience</label>
    <nameField>
        <label>PortfolioExperience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PortfolioExperiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>