force-app/main/default/objects/PortfolioExperience__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>CompanyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>