force-app/main/default/objects/PortfolioExperience__c/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <label>JobDescription</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>