force-app/main/default/objects/PortfolioExperience__c/fields/JobDuration__c.field-meta.xml
<CustomField>
    <fullName>JobDuration__c</fullName>
    <label>JobDuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>