force-app/main/default/objects/PortfolioExperience__c/fields/JoiningYear__c.field-meta.xml
<CustomField>
    <fullName>JoiningYear__c</fullName>
    <label>JoiningYear</label>
    <length>4</length>
    <type>Text</type>
</CustomField>